servo_micro: Remap USART3 DMA to channels 2 and 3

While doing this, I noticed that we use DMA channel 6 for both
USART4_RX and SPI2_RX. One of them will probably be broken.

BRANCH=servo
BUG=chromium:865478
TEST=Flash servo_micro, see CPU console, servo_micro does not crash.

Change-Id: Id8601116564e94e701f66ce3cc34dea6e97282aa
Signed-off-by: Nicolas Boichat <drinkcat@chromium.org>